tests/ui/object-lifetime/object-lifetime-default-gat-type-relative.stderr
error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/object-lifetime-default-gat-type-relative.rs:8:33
   |
LL | fn g<'r, T: Outer>(x: T::Ty<'r, dyn Inner>) {}
   |                                 ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0228`.
